--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
-
 {
   "name": "tiktok-ads-creative-flow",
   "private": true,
-   "type": "module",
-  "scripts": { "dev": "vite" },
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
